# RLM-DSPy

./: .env.example  .env.template  .gitattributes  README.md  embed_server.py  embed_server_reranking.py  pyproject.toml  watchdog.py
docs/: gpt5-4mini_flat_experiment.txt  gpt5_ivfsq8_experiment.txt
examples/: browsecomp_1k_eval.py  browsecomp_eval.py  retrieval_eval.py
logs/: 1k_eval_plan.txt  baseline_summary.txt  browsecomp_rag_combined.txt  browsecomp_rag_q1_q35_new_prompt.txt  comparison_baseline_vs_opt3_final.txt  comparison_child_sig_vs_baseline.txt  comparison_combined_q1_q55.txt  optimization_notes.txt  reasoning_high_normal5.json  reasoning_high_normal5.txt  reasoning_medium_normal5.json  reasoning_medium_normal5.txt  reasoning_medium_q003_rerun.json  reasoning_medium_q003_rerun.txt  rerun_q10_flat_v2.json  rerun_q10_flat_v2.txt  rerun_q10_flat_v3.json  rerun_q10_flat_v3.txt  rerun_q10_gpt5_ivfsq8.json  rerun_q10_gpt5_ivfsq8.txt  rerun_q10_gpt5_v2.json  rerun_q10_gpt5_v2.txt  rerun_q10_no_examples.json  rerun_q10_no_examples.txt  rerun_q10_seq_v1.json  rerun_q10_seq_v1.txt  rerun_q10_seq_v2.json  rerun_q10_seq_v2.txt  rerun_q12_q20_q21_gpt5_ivfsq8.json  rerun_q12_q20_q21_gpt5_ivfsq8.txt  rerun_q14_gpt5_v2.json  rerun_q14_gpt5_v2.txt  rerun_q14_seq_v1.json  rerun_q14_seq_v1.txt  rerun_q14_seq_v2.json  rerun_q14_seq_v2.txt  rerun_q18_both_examples.json  rerun_q18_both_examples.txt  rerun_q18_gpt5_ivfsq8.json  rerun_q18_gpt5_ivfsq8.txt  (+167 more)
rag/: __init__.py  agent.py  pool_retriever.py  signatures.py  tools.py
scripts/: build_chunk_index.py  build_hnsw_index.py  (+7 more)
