[project]
name = "rlm-dspy-rag"
version = "0.1.0"
description = "RAG-enabled RLM using dspy.RLM with FAISS retrieval for BrowseComp+"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0",           # dspy.RLM requires 3.x
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "requests>=2.28",
    "datasets>=2.14",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "tqdm>=4.65",
]

# Deno is required by dspy.RLM's default PythonInterpreter (WASM sandbox).
# Install via: brew install deno   OR   curl -fsSL https://deno.land/install.sh | sh
# Alternatively, pass interpreter=LocalPythonInterpreter() to bypass Deno.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]
